update user manage vehicle